# Otome-Sekai-no-Arukikata-PortraitCompositor

./: README.md
Otome-PortraitCompositor-Ver1.2_special_option_source/: LICENSE
Otome-PortraitCompositor-Ver1.2_special_option_source/otome-portrait-compositor-Ver1.2 code/: build_release_zip.bat  build_windows_exe.bat  更新说明_特殊选项.txt
Otome-PortraitCompositor-Ver1.2_special_option_source/otome-portrait-compositor-Ver1.2 code/PBD#U6587#U4ef6#U89e3#U6790#U914d#U7f6e/: #U8bf7#U5148#U9605#U8bfb.txt
Otome-Sekai-no-Arukikata-PortraitCompositor-Ver1.2_thanks_button_aligned/: README.md
Otome-Sekai-no-Arukikata-PortraitCompositor-Ver1.2_thanks_button_aligned/otome-portrait-compositor-Ver1.2 code/: LICENSE  README_CN.md  batch_export.py  example_call.py  main.py
otome-portrait-compositor-Ver1.0 code/: PROJECT_ANALYSIS_サキ.md  PROJECT_ANALYSIS_マユミ.md  PROJECT_ANALYSIS_ユイ.md  README_CN.md  README_EN.md  analyze_project.py  batch_export.py  build_release_zip.bat  build_windows_exe.bat  clean_build_artifacts.bat  example_call.py  main.py  otome_tlg_json_sinfo_compositor.spec  pyproject.toml
otome-portrait-compositor-Ver1.0 code/otome_tlg_compositor/: core.py  gui.py
otome-portrait-compositor-Ver1.2 code/: README_CN.md  README_EN.md  analyze_project.py  batch_export.py  blush_fix_core.patch  example_call.py  miku_device_special_fix.patch  otome_tlg_json_sinfo_compositor.spec  pyproject.toml  run_from_source.bat
otome-portrait-compositor-Ver1.2 code/PBD文件解析配置/: 请先阅读.txt
otome-portrait-compositor-Ver1.2 code/otome_tlg_compositor/: core.py
(+11 files in other folders)
