[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "otome-portrait-compositor"
version = "1.2.0"
description = "GUI compositor for Otome world portrait JSON/SINFO/PNG/TLG assets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "Pillow>=10.0.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["otome_tlg_compositor*"]
